--- a/Project 04 Twitter/Project 4-Twitter Sentiment Analysis.ipynb
+++ b/Project 04 Twitter/Project 4-Twitter Sentiment Analysis.ipynb
@@ -22,9 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in c:\\users\\sadusumalli\\anaconda3\\lib\\site-packages (3.0.3)\n",
-      "Requirement already satisfied: jdcal in c:\\users\\sadusumalli\\anaconda3\\lib\\site-packages (from openpyxl) (1.4.1)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\sadusumalli\\anaconda3\\lib\\site-packages (from openpyxl) (1.0.1)\n"
+      "Requirement already satisfied: openpyxl in c:\\users\\kishore\\anaconda3\\lib\\site-packages (3.0.3)\n",
+      "Requirement already satisfied: jdcal in c:\\users\\kishore\\anaconda3\\lib\\site-packages (from openpyxl) (1.4.1)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\kishore\\anaconda3\\lib\\site-packages (from openpyxl) (1.0.1)\n"
      ]
     }
    ],
